--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 # Docker client async
 bollard = "0.16"
+regex = "1.0"
 
 # Async runtime
 tokio = { version = "1.0", features = ["full"] }
@@ -26,3 +27,7 @@ serde_json = "1.0"
 
 # DateTime
 chrono = { version = "0.4", features = ["serde"] }
+
+# Interface TUI (Terminal User Interface)
+ratatui = "0.26"
+crossterm = "0.27"
